fixed about page

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -152,7 +152,7 @@ const slogan =
     <div class="flex flex-wrap justify-center items-center gap-8 md:gap-16">
       <div class="flex items-center">
         <svg
-          class="w-8 h-8 text-yellow-400 mr-2"
+          class="w-8 h-8 text-yellow-500 mr-2"
           fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
@@ -161,11 +161,11 @@ const slogan =
             d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
             clip-rule="evenodd"></path></svg
         >
-        <span class="text-xl font-bold text-yellow-600">100% Safe</span>
+        <span class="text-xl font-bold text-yellow-500">100% Safe</span>
       </div>
       <div class="flex items-center">
         <svg
-          class="w-8 h-8 text-yellow-400 mr-2"
+          class="w-8 h-8 text-yellow-500 mr-2"
           fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
@@ -174,11 +174,11 @@ const slogan =
             d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
             clip-rule="evenodd"></path></svg
         >
-        <span class="text-xl font-bold text-yellow-600">5- Paw Rating</span>
+        <span class="text-xl font-bold text-yellow-500">5- Paw Rating</span>
       </div>
       <div class="flex items-center">
         <svg
-          class="w-8 h-8 text-yellow-400 mr-2"
+          class="w-8 h-8 text-yellow-500 mr-2"
           fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
@@ -187,7 +187,7 @@ const slogan =
             d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
             clip-rule="evenodd"></path></svg
         >
-        <span class="text-xl font-bold text-yellow-600">Happy Clients</span>
+        <span class="text-xl font-bold text-yellow-500">Happy Clients</span>
       </div>
     </div>
   </div>
@@ -196,7 +196,7 @@ const slogan =
 <section id="features" class="py-20 bg-white">
   <div class="container mx-auto px-6">
     <h2
-      class="text-3xl font-bold text-center text-sky-800 mb-4 animate-fade-in"
+      class="text-3xl font-bold text-center text-black- mb-4 animate-fade-in"
     >
       Our Doggy Services<span class="text-sky-300"></span>
     </h2>
